# cpp_task

./: .gitignore  CMakeLists.txt  ReadMe.md  config.json  dijkstra.py  dijkstra_test.cpp  methods.cpp  plainInitial.cpp
include/: config.h  dijkstra_solver.h  dp_solver.h  point.h  solver.h  solver_factory.h  utilities.h
src/: dijkstra_solver.cpp  dp_solver.cpp  main.cpp  methods.cpp  point.cpp  utilities.cpp
tests/: CMakeLists.txt  Makefile  test_main.cpp
